--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
 
     <div class="container">
         <header>
-            <h1>@colombia</h1>
-            <p>Contraentrega Colombia</p>
+            <h1>@centrocalivalle</h1>
+            <p>Centro Cali, Valle, Colombia - Cordientrega</p>
         </header>
 
         <!-- Enlaces -->
         <div class="buttons">
-            <a href="afghanistan.html" target="_blank">Afghanistan</a>
-            <a href="https://en.wikipedia.org/wiki/Zimbabwe" target="_blank">Zimbabwe</a>
+            <a href="afghanistan.html" target="_blank">GRUPO WHATSAPP</a>
+            <a href="https://en.wikipedia.org/wiki/Zimbabwe" target="_blank">GRUPO FACEBOOK</a>
         </div>
         <section>
             <p>¿Qué vendes?</p>
@@ -294,13 +294,13 @@
         
 <!-- Contactos -->
         <section>
-            <h2>Contacts</h2>
+            <h2>Socios</h2>
             <table>
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Categories</th>
-                        <th>Location</th>
+                        <th>Nombre</th>
+                        <th>Categorías</th>
+                        <th>Ubicación</th>
                         <th>Tel 1</th>
                         <th>Tel 2</th>
                         <th>Email</th>
@@ -308,7 +308,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><a href="williamparra.html" class="clickable" target="_blank" rel="noopener noreferrer">@williamparra</a></td>
+                        <td><a href="https://bodegascali." class="clickable" target="_blank" rel="noopener noreferrer">1. @bodegascali</a></td>
                         <td>Abogado , bienes raíces</td>
                         <td>-</td>
                         <td>+573105938658</td>
