Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <div class="image-container">
         <img src="https://www.flickr.com/photos/a-mather07/53543273007/in/photostream/lightbox/" alt="Producto 1" style="width:100%; height:auto;">
     </div>
-    <h2>Producto 1</h2> <!-- Título del producto -->
+    <h2>Licencia Socios</h2> <!-- Título del producto -->
     <p id="precio-cop-producto1">Precio: $ 80,000 COP</p> <!-- Precio fijo en COP -->
     <p id="precio-lightning-producto1">Precio en Lightning: 0 satoshis</p> <!-- Precio en Lightning -->
     <a href="#" id="link-lightning-producto1">
@@ -272,8 +272,8 @@
     <div class="image-container">
         <img src="https://www.flickr.com/photos/a-mather07/53543273007/in/photostream/lightbox/" alt="Producto 2" style="width:100%; height:auto;">
     </div>
-    <h2>Producto 2</h2> <!-- Título del producto -->
-    <p id="precio-cop-producto2">Precio: $ 800,000 COP</p> <!-- Precio fijo en COP -->
+    <h2>Licencia Franquicia</h2> <!-- Título del producto -->
+    <p id="precio-cop-producto2">Precio: $ 8,000,000 COP</p> <!-- Precio fijo en COP -->
     <p id="precio-lightning-producto2">Precio en Lightning: 0 satoshis</p> <!-- Precio en Lightning -->
     <a href="#" id="link-lightning-producto2">
         <button style="margin-bottom: 10px;">Comprar ahora</button>
@@ -308,8 +308,8 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><a href="https://bodegascali." class="clickable" target="_blank" rel="noopener noreferrer">1. @bodegascali</a></td>
-                        <td>Abogado , bienes raíces</td>
+                        <td><a href="https://bodegascali-cordientrega.pages.dev" class="clickable" target="_blank" rel="noopener noreferrer">1. @bodegascali</a></td>
+                        <td>Juguetería, Piñatería, Hogar, Salud y Belleza</td>
                         <td>-</td>
                         <td>+573105938658</td>
                         <td>-</td>
@@ -346,7 +346,7 @@
 // Precios fijos en COP para cada producto
 const preciosCOP = {
     producto1: 80000, // Precio en COP para Producto 1
-    producto2: 800000, // Precio en COP para Producto 2
+    producto2: 8000000, // Precio en COP para Producto 2
     producto3: 150000, // Precio en COP para Producto 3 (Ejemplo de nuevo producto)
     producto4: 500000  // Precio en COP para Producto 4 (Ejemplo de nuevo producto)
 };
