Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <a href="https://en.wikipedia.org/wiki/Zimbabwe" target="_blank">GRUPO FACEBOOK</a>
         </div>
         <section>
-            <p>¿Qué vendes?</p>
+            <p>Cotización de envío Express</p>
 
             <!-- Formulario -->
             <form action="https://formspree.io/f/xwpveegv" method="POST" enctype="multipart/form-data" id="product-form">
