Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
         <!-- Enlaces -->
         <div class="buttons">
-            <a href="afghanistan.html" target="_blank">GRUPO WHATSAPP</a>
+            <a href="https://chat.whatsapp.com/B95MwOZGGMXF9ZrLhlBxdX" target="_blank">GRUPO WHATSAPP</a>
             <a href="https://en.wikipedia.org/wiki/Zimbabwe" target="_blank">GRUPO FACEBOOK</a>
         </div>
         <section>
