Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     </div>
     <h2>Licencia Socios</h2> <!-- Título del producto -->
     <p id="precio-cop-producto1">Precio: $ 80,000 COP</p> <!-- Precio fijo en COP -->
-    <p id="precio-lightning-producto1">Precio en Lightning: 0 satoshis</p> <!-- Precio en Lightning -->
+    <p id="precio-lightning-producto1">Precio en Bitcoin: 0 satoshis</p> <!-- Precio en Lightning -->
     <a href="#" id="link-lightning-producto1">
         <button style="margin-bottom: 10px;">Lightning Network</button>
     </a>
@@ -280,9 +280,9 @@
     </div>
     <h2>Licencia Franquicia</h2> <!-- Título del producto -->
     <p id="precio-cop-producto2">Precio: $ 8,000,000 COP</p> <!-- Precio fijo en COP -->
-    <p id="precio-lightning-producto2">Precio en Lightning: 0 satoshis</p> <!-- Precio en Lightning -->
+    <p id="precio-lightning-producto2">Precio en Bitcoin: 0 satoshis</p> <!-- Precio en Lightning -->
     <a href="#" id="link-lightning-producto2">
-        <button style="margin-bottom: 10px;">Comprar ahora</button>
+        <button style="margin-bottom: 10px;">Lightning Network</button>
     </a>
     <!-- Botón para WhatsApp -->
     <a href="https://wa.me/1234567890" target="_blank" id="link-whatsapp-producto1">
