Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                         <td>-</td>
                     </tr>
 <tr>
-                        <td><a href="" class="clickable" target="_blank" rel="noopener noreferrer">@18jcpm</a></td>
+                        <td><a href="" class="clickable" target="_blank" rel="noopener noreferrer">@2. </a></td>
                         <td>DJ</td>
                         <td>-</td>
                         <td>+573215340988</td>
@@ -330,7 +330,7 @@
                         <td>-</td>
                     </tr>
 <tr>
-                        <td><a href="https://co.contraentregaco.com/collections/18jcpm" class="clickable" target="_blank" rel="noopener noreferrer">@18jcpm</a></td>
+                        <td><a href="https://co.contraentregaco.com/collections/18jcpm" class="clickable" target="_blank" rel="noopener noreferrer">3. </a></td>
                         <td>DJ</td>
                         <td>-</td>
                         <td>+573215340988</td>
