--- a/index.html
+++ b/index.html
@@ -275,9 +275,14 @@
 
 <!-- Producto 2 -->
 <div class="product">
-    <div class="image-container">
-        <img src="https://www.flickr.com/photos/a-mather07/53543273007/in/photostream/lightbox/" alt="Producto 2" style="width:100%; height:auto;">
-    </div>
+    <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https://www.canva.com/design/DAGdEKRrZ4s/joebJOL1XlFIr9UcW9E0eQ/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGdEKRrZ4s&#x2F;joebJOL1XlFIr9UcW9E0eQ&#x2F;view?utm_content=DAGdEKRrZ4s&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Diseño</a> de Juan Camilo
     <h2>Licencia Franquicia</h2> <!-- Título del producto -->
     <p id="precio-cop-producto2">Precio: $ 8,000,000 COP</p> <!-- Precio fijo en COP -->
     <p id="precio-lightning-producto2">Precio en Bitcoin: 0 satoshis</p> <!-- Precio en Lightning -->
