Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <!-- Enlaces -->
         <div class="buttons">
             <a href="https://chat.whatsapp.com/B95MwOZGGMXF9ZrLhlBxdX" target="_blank">GRUPO WHATSAPP</a>
-            <a href="https://en.wikipedia.org/wiki/Zimbabwe" target="_blank">GRUPO FACEBOOK</a>
+            <a href="https://www.facebook.com/groups/581271028151371/?ref=share&mibextid=NSMWBT"_blank">GRUPO FACEBOOK</a>
         </div>
         <section>
             <p>Cotización de envío Express</p>
