--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <button style="margin-bottom: 10px;">Lightning Network</button>
     </a>
     <!-- Botón para WhatsApp -->
-    <a href="https://wa.me/1234567890" target="_blank" id="link-whatsapp-producto1">
+    <a href="https://wa.me/573215970535" target="_blank" id="link-whatsapp-producto1">
         <button>WhatsApp</button>
     </a>
 </div>
@@ -282,7 +282,7 @@
     src="https://www.canva.com/design/DAGdEKRrZ4s/joebJOL1XlFIr9UcW9E0eQ/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGdEKRrZ4s&#x2F;joebJOL1XlFIr9UcW9E0eQ&#x2F;view?utm_content=DAGdEKRrZ4s&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Diseño</a> de Juan Camilo
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGdEKRrZ4s&#x2F;joebJOL1XlFIr9UcW9E0eQ&#x2F;view?utm_content=DAGdEKRrZ4s&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Ver</a>
     <h2>Licencia Franquicia</h2> <!-- Título del producto -->
     <p id="precio-cop-producto2">Precio: $ 8,000,000 COP</p> <!-- Precio fijo en COP -->
     <p id="precio-lightning-producto2">Precio en Bitcoin: 0 satoshis</p> <!-- Precio en Lightning -->
@@ -290,8 +290,8 @@
         <button style="margin-bottom: 10px;">Lightning Network</button>
     </a>
     <!-- Botón para WhatsApp -->
-    <a href="https://wa.me/1234567890" target="_blank" id="link-whatsapp-producto1">
-        <button>Hablar por WhatsApp</button>
+    <a href="https://wa.me/573215970535" target="_blank" id="link-whatsapp-producto1">
+        <button>WhatsApp</button>
     </a>
 </div>
     
