Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -219,26 +219,26 @@
             <a href="https://www.facebook.com/groups/581271028151371/?ref=share&mibextid=NSMWBT"_blank">GRUPO FACEBOOK</a>
         </div>
         <section>
-            <p>Cotización de envío Express</p>
+            <p>Envío Express</p>
 
             <!-- Formulario de Cotización Envío Express -->
 <form action="https://formspree.io/f/xwpveegv" method="POST" enctype="multipart/form-data" id="envio-express-form">
-    <label for="nombre-envia">Nombre de quien envía:</label>
+    <label for="nombre-envia">Nombre (Remitente):</label>
     <input type="text" id="nombre-envia" name="nombre-envia" required>
 
-    <label for="direccion-recogida">Dirección de recogida:</label>
+    <label for="direccion-recogida">Dirección de recogida (Remitente)</label>
     <input type="text" id="direccion-recogida" name="direccion-recogida" required>
 
-    <label for="celular-envia">Celular de quien envía:</label>
+    <label for="celular-envia">Celular (Remitente):</label>
     <input type="number" id="celular-envia" name="celular-envia" required>
 
-    <label for="nombre-recibe">Nombre de quien recibe:</label>
+    <label for="nombre-recibe">Nombre (Receptor):</label>
     <input type="text" id="nombre-recibe" name="nombre-recibe" required>
 
-    <label for="celular-recibe">Celular de quien recibe:</label>
+    <label for="celular-recibe">Celular (Receptor):</label>
     <input type="number" id="celular-recibe" name="celular-recibe" required>
 
-    <label for="direccion-entrega">Dirección de entrega:</label>
+    <label for="direccion-entrega">Dirección de entrega (Receptor):</label>
     <input type="text" id="direccion-entrega" name="direccion-entrega" required>
 
     <label for="mensaje">Mensaje:</label>
