Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -259,8 +259,14 @@
 <!-- Producto 1 -->
 <div class="product">
     <div class="image-container">
-        <img src="https://www.flickr.com/photos/a-mather07/53543273007/in/photostream/lightbox/" alt="Producto 1" style="width:100%; height:auto;">
-    </div>
+        <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https://www.canva.com/design/DAGdEQWqB_g/bQVXIpZUvQfqbW4BDEuDYQ/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGdEQWqB_g&#x2F;bQVXIpZUvQfqbW4BDEuDYQ&#x2F;view?utm_content=DAGdEQWqB_g&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Ver</a>
     <h2>Licencia Socios</h2> <!-- Título del producto -->
     <p id="precio-cop-producto1">Precio: $ 80,000 COP</p> <!-- Precio fijo en COP -->
     <p id="precio-lightning-producto1">Precio en Bitcoin: 0 satoshis</p> <!-- Precio en Lightning -->
