Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     </a>
     <!-- Botón para WhatsApp -->
     <a href="https://wa.me/573215970535" target="_blank" id="link-whatsapp-producto1">
-        <button>WhatsApp</button>
+        <button>Bitcoin</button>
     </a>
 </div>
 
@@ -297,7 +297,7 @@
     </a>
     <!-- Botón para WhatsApp -->
     <a href="https://wa.me/573215970535" target="_blank" id="link-whatsapp-producto1">
-        <button>WhatsApp</button>
+        <button>Bitcoin</button>
     </a>
 </div>
     
