Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 </div>
 <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGdEQWqB_g&#x2F;bQVXIpZUvQfqbW4BDEuDYQ&#x2F;view?utm_content=DAGdEQWqB_g&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Ver</a>
     <h2>Licencia Socios</h2> <!-- Título del producto -->
-    <p id="precio-cop-producto1">Precio: $ 80,000 COP</p> <!-- Precio fijo en COP -->
+    <p id="precio-cop-producto1">Precio: $ 500,000 COP</p> <!-- Precio fijo en COP -->
     <p id="precio-lightning-producto1">Precio en Bitcoin: 0 satoshis</p> <!-- Precio en Lightning -->
     <a href="#" id="link-lightning-producto1">
         <button style="margin-bottom: 10px;">Lightning Network</button>
@@ -290,7 +290,7 @@
 </div>
 <a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGdEKRrZ4s&#x2F;joebJOL1XlFIr9UcW9E0eQ&#x2F;view?utm_content=DAGdEKRrZ4s&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Ver</a>
     <h2>Licencia Franquicia</h2> <!-- Título del producto -->
-    <p id="precio-cop-producto2">Precio: $ 8,000,000 COP</p> <!-- Precio fijo en COP -->
+    <p id="precio-cop-producto2">Precio: $ 10,000,000 COP</p> <!-- Precio fijo en COP -->
     <p id="precio-lightning-producto2">Precio en Bitcoin: 0 satoshis</p> <!-- Precio en Lightning -->
     <a href="#" id="link-lightning-producto2">
         <button style="margin-bottom: 10px;">Lightning Network</button>
@@ -362,10 +362,10 @@
 <script>
 // Precios fijos en COP para cada producto
 const preciosCOP = {
-    producto1: 80000, // Precio en COP para Producto 1
-    producto2: 8000000, // Precio en COP para Producto 2
-    producto3: 150000, // Precio en COP para Producto 3 (Ejemplo de nuevo producto)
-    producto4: 500000  // Precio en COP para Producto 4 (Ejemplo de nuevo producto)
+    producto1: 500000, // Precio en COP para Producto 1
+    producto2: 10000000, // Precio en COP para Producto 2
+    producto3: 150000, // Precio en COP para Producto 3 
+    producto4: 500000  // Precio en COP para Producto 4 
 };
 
 // Función para obtener el precio de BTC en USD desde CoinGecko
