Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@
 
             <!-- Footer -->
         <footer class="footer">
-            <p>&copy; <span id="year"></span> <strong>Contraentrega</strong></p>
-            <p>Contraentrega Colombia: <a href="taccolombia.html" target="_blank" rel="noopener noreferrer">Términos y Condiciones</a></p>
+            <p>&copy; <span id="year"></span> <strong>Cordientrega</strong></p>
+            <p>Tor: <a href="taccolombia.html" target="_blank" rel="noopener noreferrer">-</a></p>
         </footer>
     </div>
 
