--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <!-- Footer -->
         <footer class="footer">
             <p>&copy; <span id="year"></span> <strong>Cordientrega</strong></p>
-            <p>Tor: <a href="taccolombia.html" target="_blank" rel="noopener noreferrer">-</a></p>
+            <p>Bitcoin: <a href="bitcoin:15gdaABbh6oZZG4kfQPXoSdqj9YMsg5RaH" target="_blank" rel="noopener noreferrer">15gdaABbh6oZZG4kfQPXoSdqj9YMsg5RaH</a></p>
         </footer>
     </div>
 
