Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -216,18 +216,18 @@
         <!-- Enlaces -->
         <div class="buttons">
             <a href="https://af.cordientrega.com" target="_blank">Afghanistan</a>
-            <a href="https://af.cordientrega.com" target="_blank">Albania</a>
-            <a href="https://af.cordientrega.com" target="_blank">Algeria</a>
-            <a href="https://af.cordientrega.com" target="_blank">Andorra</a>
-            <a href="https://af.cordientrega.com" target="_blank">Angola</a>
-            <a href="https://af.cordientrega.com" target="_blank">Antigua and Barbuda</a>
-            <a href="https://af.cordientrega.com" target="_blank">Argentina</a>
-            <a href="https://af.cordientrega.com" target="_blank">Armenia</a>
-            <a href="https://af.cordientrega.com" target="_blank">Australia</a>
-            <a href="https://af.cordientrega.com" target="_blank">Austria</a>
-            <a href="https://af.cordientrega.com" target="_blank">Azerbaijan</a>
-            <a href="https://en.wikipedia.org/wiki/Canada" target="_blank">Bahamas</a>
-            <a href="https://en.wikipedia.org/wiki/Chile" target="_blank">Bahrain</a>
+            <a href="https://al.cordientrega.com" target="_blank">Albania</a>
+            <a href="https://dz.cordientrega.com" target="_blank">Algeria</a>
+            <a href="https://ad.cordientrega.com" target="_blank">Andorra</a>
+            <a href="https://ao.cordientrega.com" target="_blank">Angola</a>
+            <a href="https://ag.cordientrega.com" target="_blank">Antigua and Barbuda</a>
+            <a href="https://ar.cordientrega.com" target="_blank">Argentina</a>
+            <a href="https://am.cordientrega.com" target="_blank">Armenia</a>
+            <a href="https://au.cordientrega.com" target="_blank">Australia</a>
+            <a href="https://at.cordientrega.com" target="_blank">Austria</a>
+            <a href="https://az.cordientrega.com" target="_blank">Azerbaijan</a>
+            <a href="https://bs.cordientrega.com" target="_blank">Bahamas</a>
+            <a href="https://bh.cordientrega.com" target="_blank">Bahrain</a>
             <a href="https://en.wikipedia.org/wiki/China" target="_blank">Bangladesh</a>
             <a href="https://en.wikipedia.org/wiki/Denmark" target="_blank">Barbados</a>
             <a href="https://en.wikipedia.org/wiki/Egypt" target="_blank">Belarus</a>
