Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -228,12 +228,12 @@
             <a href="https://az.cordientrega.com" target="_blank">Azerbaijan</a>
             <a href="https://bs.cordientrega.com" target="_blank">Bahamas</a>
             <a href="https://bh.cordientrega.com" target="_blank">Bahrain</a>
-            <a href="https://en.wikipedia.org/wiki/China" target="_blank">Bangladesh</a>
-            <a href="https://en.wikipedia.org/wiki/Denmark" target="_blank">Barbados</a>
-            <a href="https://en.wikipedia.org/wiki/Egypt" target="_blank">Belarus</a>
-            <a href="https://en.wikipedia.org/wiki/France" target="_blank">Belgium</a>
-            <a href="https://en.wikipedia.org/wiki/Congo,_Democratic_Republic_of_the" target="_blank">Belize</a>
-            <a href="https://en.wikipedia.org/wiki/Costa_Rica" target="_blank">Benin</a>
+            <a href="https://bd.cordientrega.com" target="_blank">Bangladesh</a>
+            <a href="https://bb.cordientrega.com" target="_blank">Barbados</a>
+            <a href="https://by.cordientrega.com" target="_blank">Belarus</a>
+            <a href="https://be.cordientrega.com" target="_blank">Belgium</a>
+            <a href="https://bz.cordientrega.com" target="_blank">Belize</a>
+            <a href="https://bj.cordientrega.com" target="_blank">Benin</a>
             <a href="https://en.wikipedia.org/wiki/Croatia" target="_blank">Bhutan</a>
             <a href="https://en.wikipedia.org/wiki/Cuba" target="_blank">Bolivia</a>
             <a href="https://en.wikipedia.org/wiki/Cyprus" target="_blank">Bosnia and Herzegovina</a>
