Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -234,11 +234,11 @@
             <a href="https://be.cordientrega.com" target="_blank">Belgium</a>
             <a href="https://bz.cordientrega.com" target="_blank">Belize</a>
             <a href="https://bj.cordientrega.com" target="_blank">Benin</a>
-            <a href="https://en.wikipedia.org/wiki/Croatia" target="_blank">Bhutan</a>
-            <a href="https://en.wikipedia.org/wiki/Cuba" target="_blank">Bolivia</a>
-            <a href="https://en.wikipedia.org/wiki/Cyprus" target="_blank">Bosnia and Herzegovina</a>
-            <a href="https://en.wikipedia.org/wiki/Czech_Republic" target="_blank">Botswana</a>
-            <a href="https://en.wikipedia.org/wiki/Denmark" target="_blank">Brazil</a>
+            <a href="https://bt.cordientrega.com" target="_blank">Bhutan</a>
+            <a href="https://bo.cordientrega.com" target="_blank">Bolivia</a>
+            <a href="https://ba.cordientrega.com" target="_blank">Bosnia and Herzegovina</a>
+            <a href="https://bw.cordientrega.com" target="_blank">Botswana</a>
+            <a href="https://br.cordientrega.com" target="_blank">Brazil</a>
             <a href="https://en.wikipedia.org/wiki/Djibouti" target="_blank">Brunei</a>
             <a href="https://en.wikipedia.org/wiki/Dominica" target="_blank">Bulgaria</a>
             <a href="https://en.wikipedia.org/wiki/Dominican_Republic" target="_blank">Burkina Faso</a>
