Actualizar index.htmln

--- a/index.html
+++ b/index.html
@@ -239,10 +239,10 @@
             <a href="https://ba.cordientrega.com" target="_blank">Bosnia and Herzegovina</a>
             <a href="https://bw.cordientrega.com" target="_blank">Botswana</a>
             <a href="https://br.cordientrega.com" target="_blank">Brazil</a>
-            <a href="https://en.wikipedia.org/wiki/Djibouti" target="_blank">Brunei</a>
-            <a href="https://en.wikipedia.org/wiki/Dominica" target="_blank">Bulgaria</a>
-            <a href="https://en.wikipedia.org/wiki/Dominican_Republic" target="_blank">Burkina Faso</a>
-            <a href="https://en.wikipedia.org/wiki/Ecuador" target="_blank">Burundi</a>
+            <a href="https://bn.cordientrega.com" target="_blank">Brunei</a>
+            <a href="https://bg.cordientrega.com" target="_blank">Bulgaria</a>
+            <a href="https://bf.cordientrega.com" target="_blank">Burkina Faso</a>
+            <a href="https://bi.cordientrega.com" target="_blank">Burundi</a>
             <a href="https://en.wikipedia.org/wiki/Egypt" target="_blank">Cabo Verde</a>
             <a href="https://en.wikipedia.org/wiki/El_Salvador" target="_blank">Cambodia</a>
             <a href="https://en.wikipedia.org/wiki/Equatorial_Guinea" target="_blank">Cameroon</a>
