Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -243,19 +243,19 @@
             <a href="https://bg.cordientrega.com" target="_blank">Bulgaria</a>
             <a href="https://bf.cordientrega.com" target="_blank">Burkina Faso</a>
             <a href="https://bi.cordientrega.com" target="_blank">Burundi</a>
-            <a href="https://en.wikipedia.org/wiki/Egypt" target="_blank">Cabo Verde</a>
-            <a href="https://en.wikipedia.org/wiki/El_Salvador" target="_blank">Cambodia</a>
-            <a href="https://en.wikipedia.org/wiki/Equatorial_Guinea" target="_blank">Cameroon</a>
-            <a href="https://en.wikipedia.org/wiki/Eritrea" target="_blank">Canada</a>
-            <a href="https://en.wikipedia.org/wiki/Estonia" target="_blank">Central African Republic</a>
-            <a href="https://en.wikipedia.org/wiki/Eswatini" target="_blank">Chad</a>
+            <a href="https://cv.cordientrega.com" target="_blank">Cabo Verde</a>
+            <a href="https://kh.cordientrega.com" target="_blank">Cambodia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Cameroon</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Canada</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Central African Republic</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Chad</a>
             <a href="https://cl.cordientrega.com" target="_blank">Chile</a>
             <a href="https://cn.cordientrega.com" target="_blank">China</a>
             <a href="https://co.cordientrega.com" target="_blank">Colombia</a>
-            <a href="https://en.wikipedia.org/wiki/France" target="_blank">Comoros</a>
-            <a href="https://en.wikipedia.org/wiki/Gabon" target="_blank">Congo</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Comoros</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Congo</a>
             <a href="https://cr.cordientrega.com" target="_blank">Costa Rica</a>
-            <a href="https://en.wikipedia.org/wiki/Georgia_(country)" target="_blank">Croatia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Croatia</a>
             <a href="https://en.wikipedia.org/wiki/Germany" target="_blank">Cuba</a>
             <a href="https://en.wikipedia.org/wiki/Ghana" target="_blank">Cyprus</a>
             <a href="https://en.wikipedia.org/wiki/Greece" target="_blank">Czech Republic</a>
@@ -407,7 +407,7 @@
             <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Vietnam</a>
             <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Yemen</a>
             <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Zambia</a>
-            <a href="https://en.wikipedia.org/wiki/Zimbabwe" target="_blank">Zimbabwe</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Zimbabwe</a>
         </div>
 
             <!-- Footer -->
