Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -256,21 +256,21 @@
             <a href="https://cm.cordientrega.com" target="_blank">Congo</a>
             <a href="https://cr.cordientrega.com" target="_blank">Costa Rica</a>
             <a href="https://cm.cordientrega.com" target="_blank">Croatia</a>
-            <a href="https://en.wikipedia.org/wiki/Germany" target="_blank">Cuba</a>
-            <a href="https://en.wikipedia.org/wiki/Ghana" target="_blank">Cyprus</a>
-            <a href="https://en.wikipedia.org/wiki/Greece" target="_blank">Czech Republic</a>
-            <a href="https://en.wikipedia.org/wiki/Grenada" target="_blank">Denmark</a>
-            <a href="https://en.wikipedia.org/wiki/Guatemala" target="_blank">Djibouti</a>
-            <a href="https://en.wikipedia.org/wiki/Guinea" target="_blank">Dominica</a>
-            <a href="https://en.wikipedia.org/wiki/Guinea-Bissau" target="_blank">Dominican Republic</a>
-            <a href="https://en.wikipedia.org/wiki/Guyana" target="_blank">Ecuador</a>
-            <a href="https://en.wikipedia.org/wiki/Haiti" target="_blank">Egypt</a>
-            <a href="https://en.wikipedia.org/wiki/Honduras" target="_blank">El Salvador</a>
-            <a href="https://en.wikipedia.org/wiki/Hungary" target="_blank">Equatorial Guinea</a>
-            <a href="https://en.wikipedia.org/wiki/Iceland" target="_blank">Eritrea</a>
-            <a href="https://en.wikipedia.org/wiki/India" target="_blank">Estonia</a>
-            <a href="https://en.wikipedia.org/wiki/Indonesia" target="_blank">Eswatini</a>
-            <a href="https://en.wikipedia.org/wiki/Iran" target="_blank">Ethiopia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Cuba</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Cyprus</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Czech Republic</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Denmark</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Djibouti</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Dominica</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Dominican Republic</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Ecuador</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Egypt</a>
+            <a href="https://cm.cordientrega.com" target="_blank">El Salvador</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Equatorial Guinea</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Eritrea</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Estonia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Eswatini</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Ethiopia</a>
             <a href="https://en.wikipedia.org/wiki/Iraq" target="_blank">Fiji</a>
             <a href="https://en.wikipedia.org/wiki/Ireland" target="_blank">Finland</a>
             <a href="https://en.wikipedia.org/wiki/Israel" target="_blank">France</a>
@@ -395,18 +395,18 @@
             <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Turkmenistan</a>
             <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Tuvalu</a>
             <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Uganda</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Ukraine</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">United Arab Emirates</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">United Kingdom</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">United States</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Uruguay</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Uzbekistan</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Vanuatu</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Vatican City</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Venezuela</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Vietnam</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Yemen</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Zambia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Ukraine</a>
+            <a href="https://cm.cordientrega.com" target="_blank">United Arab Emirates</a>
+            <a href="https://cm.cordientrega.com" target="_blank">United Kingdom</a>
+            <a href="https://cm.cordientrega.com" target="_blank">United States</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Uruguay</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Uzbekistan</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Vanuatu</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Vatican City</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Venezuela</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Vietnam</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Yemen</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Zambia</a>
             <a href="https://cm.cordientrega.com" target="_blank">Zimbabwe</a>
         </div>
 
