--- a/index.html
+++ b/index.html
@@ -273,37 +273,37 @@
             <a href="https://cm.cordientrega.com" target="_blank">Ethiopia</a>
             <a href="https://cm.cordientrega.com"_blank">Fiji</a>
             <a href="https://cm.cordientrega.com" target="_blank">Finland</a>
-            <a href="https://en.wikipedia.org/wiki/Israel" target="_blank">France</a>
-            <a href="https://en.wikipedia.org/wiki/Italy" target="_blank">Gabon</a>
-            <a href="https://en.wikipedia.org/wiki/Jamaica" target="_blank">Gambia</a>
-            <a href="https://en.wikipedia.org/wiki/Japan" target="_blank">Georgia</a>
-            <a href="https://en.wikipedia.org/wiki/Jordan" target="_blank">Germany</a>
-            <a href="https://en.wikipedia.org/wiki/Kazakhstan" target="_blank">Ghana</a>
-            <a href="https://en.wikipedia.org/wiki/Kenya" target="_blank">Greece</a>
-            <a href="https://en.wikipedia.org/wiki/Kiribati" target="_blank">Grenada</a>
-            <a href="https://en.wikipedia.org/wiki/Korea,_North" target="_blank">Guatemala</a>
-            <a href="https://en.wikipedia.org/wiki/Korea,_South" target="_blank">Guinea</a>
-            <a href="https://en.wikipedia.org/wiki/Kuwait" target="_blank">Guinea-Bissau</a>
-            <a href="https://en.wikipedia.org/wiki/Kyrgyzstan" target="_blank">Guyana</a>
-            <a href="https://en.wikipedia.org/wiki/Laos" target="_blank">Haiti</a>
-            <a href="https://en.wikipedia.org/wiki/Latvia" target="_blank">Honduras</a>
-            <a href="https://en.wikipedia.org/wiki/Lebanon" target="_blank">Hungary</a>
-            <a href="https://en.wikipedia.org/wiki/Lesotho" target="_blank">Iceland</a>
-            <a href="https://en.wikipedia.org/wiki/Liberia" target="_blank">India</a>
-            <a href="https://en.wikipedia.org/wiki/Libya" target="_blank">Indonesia</a>
-            <a href="https://en.wikipedia.org/wiki/Liechtenstein" target="_blank">Iran</a>
-            <a href="https://en.wikipedia.org/wiki/Lithuania" target="_blank">Iraq</a>
-            <a href="https://en.wikipedia.org/wiki/Luxembourg" target="_blank">Ireland</a>
-            <a href="https://en.wikipedia.org/wiki/Madagascar" target="_blank">Israel</a>
-            <a href="https://en.wikipedia.org/wiki/Malawi" target="_blank">Italy</a>
-            <a href="https://en.wikipedia.org/wiki/Malaysia" target="_blank">Jamaica</a>
-            <a href="https://en.wikipedia.org/wiki/Maldives" target="_blank">Japan</a>
-            <a href="https://en.wikipedia.org/wiki/Mali" target="_blank">Jordan</a>
-            <a href="https://en.wikipedia.org/wiki/Malta" target="_blank">Kazakhstan</a>
-            <a href="https://en.wikipedia.org/wiki/Marshall_Islands" target="_blank">Kenya</a>
-            <a href="https://en.wikipedia.org/wiki/Mauritania" target="_blank">Kiribati</a>
-            <a href="https://en.wikipedia.org/wiki/Mauritius" target="_blank">Nort Korea</a>
-            <a href="https://en.wikipedia.org/wiki/Mexico" target="_blank">South Korea</a>
+            <a href="https://cm.cordientrega.com" target="_blank">France</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Gabon</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Gambia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Georgia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Germany</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Ghana</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Greece</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Grenada</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Guatemala</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Guinea</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Guinea-Bissau</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Guyana</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Haiti</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Honduras</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Hungary</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Iceland</a>
+            <a href="https://cm.cordientrega.com" target="_blank">India</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Indonesia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Iran</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Iraq</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Ireland</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Israel</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Italy</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Jamaica</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Japan</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Jordan</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Kazakhstan</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Kenya</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Kiribati</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Nort Korea</a>
+            <a href="https://cm.cordientrega.com" target="_blank">South Korea</a>
             <a href="https://en.wikipedia.org/wiki/Micronesia" target="_blank">Kosovo</a>
             <a href="https://en.wikipedia.org/wiki/Moldova" target="_blank">Kuwait</a>
             <a href="https://en.wikipedia.org/wiki/Monaco" target="_blank">Kyrgyzstan</a>
@@ -342,59 +342,59 @@
             <a href="https://en.wikipedia.org/wiki/Saint_Vincent_and_the_Grenadines" target="_blank">Nicaragua</a>
             <a href="https://en.wikipedia.org/wiki/Samoa" target="_blank">Niger</a>
             <a href="https://en.wikipedia.org/wiki/San_Marino" target="_blank">Nigeria</a>
-            <a href="https://en.wikipedia.org/wiki/Sao_Tome_and_Principe" target="_blank">North Macedonia</a>
-            <a href="https://en.wikipedia.org/wiki/Saudi_Arabia" target="_blank">Norway</a>
-            <a href="https://en.wikipedia.org/wiki/Senegal" target="_blank">Oman</a>
-            <a href="https://en.wikipedia.org/wiki/Serbia" target="_blank">Pakistan</a>
-            <a href="https://en.wikipedia.org/wiki/Seychelles" target="_blank">Palau</a>
-            <a href="https://en.wikipedia.org/wiki/Sierra_Leone" target="_blank">Panama</a>
-            <a href="https://en.wikipedia.org/wiki/Singapore" target="_blank">Papua New Guinea</a>
-            <a href="https://en.wikipedia.org/wiki/Slovakia" target="_blank">Paraguay</a>
-            <a href="https://en.wikipedia.org/wiki/Slovenia" target="_blank">Peru</a>
-            <a href="https://en.wikipedia.org/wiki/Solomon_Islands" target="_blank">Philippines</a>
-            <a href="https://en.wikipedia.org/wiki/Somalia" target="_blank">Poland</a>
-            <a href="https://en.wikipedia.org/wiki/South_Africa" target="_blank">Portugal</a>
-            <a href="https://en.wikipedia.org/wiki/South_Sudan" target="_blank">Qatar</a>
-            <a href="https://en.wikipedia.org/wiki/Spain" target="_blank">Romania</a>
-            <a href="https://en.wikipedia.org/wiki/Sri_Lanka" target="_blank">Russia</a>
-            <a href="https://en.wikipedia.org/wiki/Sudan" target="_blank">Rwanda</a>
-            <a href="https://en.wikipedia.org/wiki/Suriname" target="_blank">Saint Kitts and Nevis</a>
-            <a href="https://en.wikipedia.org/wiki/Sweden" target="_blank">Saint Lucia</a>
-            <a href="https://en.wikipedia.org/wiki/Switzerland" target="_blank">Saint Vincent and the Grenadines</a>
-            <a href="https://en.wikipedia.org/wiki/Syria" target="_blank">Samoa</a>
-            <a href="https://en.wikipedia.org/wiki/Tajikistan" target="_blank">San Marino</a>
-            <a href="https://en.wikipedia.org/wiki/Tanzania" target="_blank">Sao Tome and Principe</a>
-            <a href="https://en.wikipedia.org/wiki/Thailand" target="_blank">Saudi Arabia</a>
-            <a href="https://en.wikipedia.org/wiki/Togo" target="_blank">Senegal</a>
-            <a href="https://en.wikipedia.org/wiki/Tonga" target="_blank">Serbia</a>
-            <a href="https://en.wikipedia.org/wiki/Trinidad_and_Tobago" target="_blank">Seychelles</a>
-            <a href="https://en.wikipedia.org/wiki/Tunisia" target="_blank">Sierra Leone</a>
-            <a href="https://en.wikipedia.org/wiki/Turkey" target="_blank">Singapore</a>
-            <a href="https://en.wikipedia.org/wiki/Turkmenistan" target="_blank">Slovakia</a>
-            <a href="https://en.wikipedia.org/wiki/Tuvalu" target="_blank">Slovenia</a>
-            <a href="https://en.wikipedia.org/wiki/Uganda" target="_blank">Solomon Islands</a>
-            <a href="https://en.wikipedia.org/wiki/Ukraine" target="_blank">Somalia</a>
-            <a href="https://en.wikipedia.org/wiki/United_Arab_Emirates" target="_blank">South Africa</a>
-            <a href="https://en.wikipedia.org/wiki/United_Kingdom" target="_blank">South Sudan</a>
-            <a href="https://en.wikipedia.org/wiki/United_States" target="_blank">Spain</a>
-            <a href="https://en.wikipedia.org/wiki/Uruguay" target="_blank">Sri Lanka</a>
-            <a href="https://en.wikipedia.org/wiki/Uzbekistan" target="_blank">Sudan</a>
-            <a href="https://en.wikipedia.org/wiki/Vanuatu" target="_blank">Suriname</a>
-            <a href="https://en.wikipedia.org/wiki/Vatican_City" target="_blank">Sweden</a>
-            <a href="https://en.wikipedia.org/wiki/Venezuela" target="_blank">Switzerland</a>
-            <a href="https://en.wikipedia.org/wiki/Vietnam" target="_blank">Syria</a>
-            <a href="https://en.wikipedia.org/wiki/Yemen" target="_blank">Taiwan</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Tajikistan</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Tanzania</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Thailand</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Togo</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Tonga</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Trinidad</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Tunisia</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Turkey</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Turkmenistan</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Tuvalu</a>
-            <a href="https://en.wikipedia.org/wiki/Zambia" target="_blank">Uganda</a>
+            <a href="https://cm.cordientrega.com" target="_blank">North Macedonia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Norway</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Oman</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Pakistan</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Palau</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Panama</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Papua New Guinea</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Paraguay</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Peru</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Philippines</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Poland</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Portugal</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Qatar</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Romania</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Russia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Rwanda</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Saint Kitts and Nevis</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Saint Lucia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Saint Vincent and the Grenadines</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Samoa</a>
+            <a href="https://cm.cordientrega.com" target="_blank">San Marino</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Sao Tome and Principe</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Saudi Arabia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Senegal</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Serbia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Seychelles</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Sierra Leone</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Singapore</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Slovakia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Slovenia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Solomon Islands</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Somalia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">South Africa</a>
+            <a href="https://cm.cordientrega.com" target="_blank">South Sudan</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Spain</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Sri Lanka</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Sudan</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Suriname</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Sweden</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Switzerland</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Syria</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Taiwan</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Tajikistan</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Tanzania</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Thailand</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Togo</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Tonga</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Trinidad</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Tunisia</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Turkey</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Turkmenistan</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Tuvalu</a>
+            <a href="https://cm.cordientrega.com" target="_blank">Uganda</a>
             <a href="https://cm.cordientrega.com" target="_blank">Ukraine</a>
             <a href="https://cm.cordientrega.com" target="_blank">United Arab Emirates</a>
             <a href="https://cm.cordientrega.com" target="_blank">United Kingdom</a>
